<resources>
    <string name="icon_heart">&#xf004; Login</string>
    <string name="app_name">Smart Visitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="vms">Smart Visitor</string>
    <string name="action_settings">Settings</string>
    <string name="register">{fa-user-plus} Register as a new User</string>
    <string name="activate_account">{fa-lightbulb-o} Activate Account</string>
    <string name="important">*</string>
    <string name="nationality">Nationality</string>
    <string name="selectquestion">Select a security Question</string>
    <string name="accountactivation">Account Activation</string>
    <string name="registeredemail">Enter Your Registered Email Address *</string>
    <string name="sendemail">{fa-envelope-o} SEND</string>
    <string name="home">HOME</string>
    <string name="splash_vms">Smart Visitor</string>
    <string name="powredby">Powered By</string>
    <string name="welcometovms">Welcome to Smart Visitor</string>
    <string name="enteremailid">Enter Your Email Address</string>
    <string name="enterapwd">Password</string>
    <string name="login">Login</string>
    <string name="forgotpwd">{fa-chain-broken} Forgot Password?</string>
    <string name="schappt">{fa-calendar} Schedule Appointment</string>
    <string name="loginwith">Login With</string>
    <string name="sch_appt">Schedule Appointment</string>
    <string name="personal">Personal</string>
    <string name="meetitngwith">Meeting with</string>
    <string name="schedule">Schedule</string>
    <string name="apptdetails">Appointment Details</string>
    <string name="starttime"><![CDATA[Start Time >]]></string>
    <string name="date">Date</string>
    <string name="timehint">Time</string>
    <string name="endtime"><![CDATA[End Time ]]></string>
    <string name="duration"><![CDATA[Duration]]></string>
    <string name="dayshint">Day(s)</string>
    <string name="hrshint">Hour(s)</string>
    <string name="rec_appt">Recurring Appointment</string>
    <string name="rec_patrn">Recurring Pattern</string>
    <string name="every"><![CDATA[Every >]]></string>
    <string name="days">Days</string>
    <string name="sunday"> Sunday</string>
    <string name="monday"> Monday</string>
    <string name="tuesday"> Tuesday</string>
    <string name="wednesday"> Wednesday</string>
    <string name="thursday"> Thursday</string>
    <string name="friday"> Friday</string>
    <string name="satday"> Saturday</string>
    <string name="the"><![CDATA[The >]]></string>
    <string name="every_"><![CDATA[Of Every >]]></string>
    <string name="months">Month(s)</string>
    <string name="of"><![CDATA[Of >]]></string>
    <string name="comments">Comments</string>
    <string name="conmentshint">Enter comments</string>
    <string name="previous">PREVIOUS</string>
    <string name="save">SAVE</string>
    <string name="submit">SUBMIT</string>
    <string name="appts">Appointments</string>
    <string name="schanappt">Schedule an Appointment</string>
    <string name="viewappts">View Appointments</string>
    <string name="tobeapprovedappts">To Be Approved Appointments</string>
    <string name="userdetails">User Details</string>
    <string name="fullname">Full Name</string>
    <string name="empid">Employee Id</string>
    <string name="compname">Company Name</string>
    <string name="desg">Designation</string>
    <string name="sectorcategory">Sector Category</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="starttime1">Start Time</string>
    <string name="endtime2">End Time</string>
    <string name="empapproval">Employee Approval</string>
    <string name="details">Details</string>
    <string name="hint_oldpwd">Old Password*</string>
    <string name="newpwd">New Password*</string>
    <string name="confirmpwd">Confirm Password*</string>
    <string name="email">E-mail</string>
    <string name="confirm">Confirm</string>
    <string name="cptappts">Completed Appointments</string>
    <string name="apptstatus">Appointment Status</string>
    <string name="approvedby">Approved By</string>
    <string name="approvedate">Approve Date</string>
    <string name="goback">GO BACK</string>
    <string name="registrationform">Registration Form</string>
    <string name="createyouraccount">Create Your Account</string>
    <string name="userid">User ID*</string>
    <string name="pwd">Password *</string>
    <string name="providerans">Provide Your Answer</string>
    <string name="reset">{fa-refresh spin} RESET</string>
    <string name="editprofile">Edit Profile</string>
    <string name="personaldetails">Personal Details</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="officedetails">Official Details</string>
    <string name="visitvisanum">Visit Visa Number</string>
    <string name="workpermitnum">Work Permit Number</string>
    <string name="idtype">Identification Type</string>
    <string name="idnum">Identification Number</string>
    <string name="contactdetails">Contact Details</string>
    <string name="mobno">Mobile Number</string>
    <string name="landno">Landline Phone/Extn#</string>
    <string name="savechanges">SAVE CHANGES</string>
    <string name="empdashboard">My Dashboard</string>
    <string name="back">back</string>
    <string name="enterregemail">Enter Your Registered Email Address *</string>
    <string name="provideyourans">Provide Your Answer</string>
    <string name="myappts">My Appointments</string>
    <string name="chooser_title">Select a file</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading...</string>
    <string name="welcome">Welcome</string>
    <string name="please_wait_progress">Please wait...</string>
    <string name="tryagain">Try Again !!</string>
    <string name="profileupdated">Profile updated!!</string>
    <string name="reject">{fa-close} Reject</string>
    <string name="approve">{fa-check} Approve</string>
    <string name="hintcomments">Enter comments</string>
    <string name="hint_hrs">Hour(s)</string>
    <string name="selectasecurityquestion">Select a Security Question</string>
    <string name="whatisyourmothersname" translatable="false">What is your mothers name</string>
    <string name="firstcarcolor">What is your first car colour</string>
    <string name="housenumberinchildage" translatable="false">What was the house number and street name you lived in as a child?</string>
    <string name="primaryschool" translatable="false">What primary school did you attend?</string>
    <string name="firstfulltimejob">In what town or city was your first full time job?</string>
    <string name="meetyourspouse" translatable="false">In what town or city did you meet your spouse/partner?</string>
    <string name="middlenameofchild" translatable="false">What is the middle name of your oldest child?</string>
    <string name="grandmothersmaidenname" translatable="false">What is your grandmothers (on your mothers side) maiden name?</string>
    <string name="spousemaidenname" translatable="false">What is your spouse or partners mothers maiden name?</string>
    <string name="meetfatherandmother" translatable="false">In what town or city did your mother and father meet?</string>
    <string name="spinner_title">Select Category</string>
    <string-array name="array_name">
        <item> My DashBoard</item>
        <item> Smart Visitor DashBoard</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cancel_button">cancel</string>
    <string name="ok_button">ok</string>
    <string name="choose_formats">chooseformats</string>
    <string name="select_camera">camera</string>
    <string name="selectapptdate">Select appointment date</string>
    <string name="selectdate">"Select a valid date !! "</string>
    <string name="login1">{fa-hand-o-right} Login</string>
    <string name="next">NEXT {fa-arrow-right}</string>
    <string name="previous1">{fa-arrow-left} PREVIOUS</string>
    <string name="fa_submit">{fa-check} Submit</string>
    <string name="fa_save" translatable="false">{fa-floppy-o} Save</string>
    <string name="fa_confirm">{fa-check-circle} Confirm</string>
    <string name="fa_home">{fa-home} Home</string>
    <string name="empname">Employee Name</string>
    <string name="appointmentwith">Appointment With</string>
    <string name="empfullname">Employee Full Name *</string>
    <string name="landphoneno">Landline Phone/Extn #</string>
    <string name="hintemailadd">Email Address *</string>
    <string name="officialinfo">Official Information</string>
    <string name="attachproof">Attach Proof</string>
    <string name="attachmentimage">{fa-paperclip}</string>
    <string name="toast_yes" translatable="false">{fa-check 30sp @color/white}</string>
    <string name="toast_no" translatable="false">{fa-ban 30sp @color/white}</string>
    <string name="fa_editprofile">{fa-pencil-square-o} EDIT PROFILE</string>
    <string name="nodatafoundtodisplay">No Data Found to display !!</string>
    <string name="forgotpwd_header">Forgot Password</string>
    <string name="exit">Exit ?</string>
    <string name="wanttoexit">Do you really want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="newappointment">New Appointment</string>
    <string name="registration">Registration</string>
    <string name="dashboard">Dashboard</string>
    <string name="msg_noappointmentsfound">"No Appointments Found !! "</string>
    <string name="action_reschedule">{fa-repeat} Re-Schedule</string>
    <string name="action_cancel">{fa-close} Cancel</string>
    <string name="action_edit">{fa-pencil-square-o} Edit</string>
    <string name="msg_appointmentupdated">"Appointment was updated !!! "</string>
    <string name="con_reschedule">Re-Schedule</string>
    <string name="con_cancel">Cancel</string>
    <string name="status_todays">Todays</string>
    <string name="status_approved">Approved</string>
    <string name="status_pending">Pending</string>
    <string name="status_rejected">Rejected</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_attended">Attended</string>
    <string name="status_notattended">Not Attended</string>
    <string name="status_save">Save</string>
    <string name="status_inprogress">In Progress</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_appoinment">Appointment</string>
    <string name="nav_registration">Registration</string>
    <string name="nav_security">Security</string>
    <string name="nav_admin">Administration</string>
    <string name="nav_qr">QR</string>
    <string name="nav_changepwd">Change Password</string>
    <string name="nav_logoff">Log Off</string>
    <string name="strip_userdetails">User Details</string>
    <string name="strip_officialinfo">Official Information</string>
    <string name="hint_firstname">First Name*</string>
    <string name="hint_middlename">Middle Name</string>
    <string name="hint_lastname">Last Name*</string>
    <string name="hint_empid">Employee Id</string>
    <string name="hint_desg">Designation</string>
    <string name="hint_cmpname">Company Name</string>
    <string name="hint_select_cat">Select Category</string>
    <string name="hint_dob">DOB</string>
    <string name="hint_mob">Mobile# *</string>
    <string name="hint_land">Landline Phone/Extn #</string>
    <string name="hint_workpermitno">Work Permit Number*</string>
    <string name="hint_visano">Visit Visa Number</string>
    <string name="hint_idno">Identification Number</string>
    <string name="strip_otherinfo">Other Information</string>
    <string name="hint_personal_belong">Personal Belongings if any (Eg. Laptop, Printer etc...)</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
</resources>