<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_light_gray"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/context_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/actionbarcolor"
        android:orientation="horizontal"
        android:visibility="gone">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/newappointment"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView

            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_revert" />
    </LinearLayout>

    <include layout="@layout/window_title" />

    <include layout="@layout/steps_scheduleappointment1" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/light_light_gray"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/stripcolor"
                android:padding="5dp"
                android:text="@string/strip_userdetails"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <EditText
                android:singleLine="true"
                android:id="@+id/firstName"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:hint="@string/hint_firstname"
                android:paddingLeft="5dp"

                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp" />

            <EditText
                android:singleLine="true"
                android:id="@+id/middleName"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:hint="@string/hint_middlename"
                android:paddingLeft="5dp"

                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp" />

            <EditText
                android:singleLine="true"
                android:id="@+id/lastName"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:hint="@string/hint_lastname"
                android:paddingLeft="5dp"

                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp"></EditText>

            <EditText
                android:singleLine="true"
                android:id="@+id/empId"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:ems="7"
                android:hint="@string/hint_empid"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp"></EditText>

            <EditText
                android:singleLine="true"
                android:id="@+id/designation"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:ems="7"
                android:hint="@string/hint_desg"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp"></EditText>


            <EditText
                android:singleLine="true"
                android:id="@+id/compName"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:ems="7"
                android:hint="@string/hint_cmpname"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp"></EditText>

            <EditText
                android:singleLine="true"
                android:id="@+id/category"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:hint="@string/hint_select_cat"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp"></EditText>

            <EditText
                android:singleLine="true"
                android:id="@+id/dob"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:hint="@string/hint_dob"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp"></EditText>

            <Spinner
                android:id="@+id/nationality"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"

                android:popupBackground="@color/stripcolor"
                android:spinnerMode="dropdown"

                android:drawSelectorOnTop="true" />

            <EditText
                android:singleLine="true"
                android:id="@+id/mobNo"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:ems="10"
                android:hint="@string/hint_mob"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="5dp"

                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp"></EditText>

            <EditText
                android:singleLine="true"
                android:id="@+id/landlineNo"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="#f3f3f3"
                android:ems="7"
                android:hint="@string/hint_land"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                android:textSize="13dp"></EditText>

            <RadioGroup
                android:id="@+id/myRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/radio_female" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/light_light_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@color/stripcolor"
                    android:padding="5dp"
                    android:text="@string/strip_officialinfo"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/sch_workPermitNo"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="#f3f3f3"
                    android:hint="@string/hint_workpermitno"
                    android:paddingLeft="5dp"
                    android:text="wopno"
                    android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                    android:textSize="13dp"></EditText>

                <EditText
                    android:singleLine="true"
                    android:id="@+id/sch_visanumber"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="#f3f3f3"
                    android:hint="@string/hint_visano"
                    android:paddingLeft="5dp"
                    android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                    android:textSize="13dp"></EditText>

                <Spinner
                    android:id="@+id/idType"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:popupBackground="@color/stripcolor"
                    android:spinnerMode="dropdown"

                    android:drawableRight="@drawable/down1" />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/idtype_value"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="#f3f3f3"
                    android:hint="@string/hint_idno"
                    android:paddingLeft="5dp"
                    android:textCursorDrawable="@drawable/custome_edittext_cursorcolor"
                    android:textSize="13dp"></EditText>
            </LinearLayout>

            <!--
                 <TextView
                android:id="@+id/attachProof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:textColor="#000000"
                android:layout_gravity="right|center_vertical"
                android:gravity="right|center"
                android:padding="2dp"
                android:ems="8"
                android:text="ATTACH PROOF"
                android:textSize="12sp" />
            -->

            <RelativeLayout
                android:id="@+id/ll_attach_file"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="#e8e8e7">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:text="@string/attachmentimage" />

                <TextView
                    android:id="@+id/attachfile_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="40dp"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/attachproof"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="6dp"
                android:background="#ED6D05"
                android:ems="6"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/next"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>